# libmedia

./: .gitignore  README.md  copy_apks.sh  install_debug_signed_apk.sh  install_debug_unsigned_apk.sh  install_release_signed_apk.sh  settings.gradle
app/src/main/java/libmedia/: CMakeLists.txt  Chmod.java  Media.kt
app/src/main/java/libmedia/AndroidBitmap/: CMakeLists.txt  b.h  bitmap.cpp  bitmap.h  pixelTypes.cpp  pixelTypes.h
app/src/main/java/libmedia/AudioEngine/: AudioEngine.cpp  AudioEngine.h  Generator.cpp  Player.cpp
app/src/main/java/libmedia/AudioEngine/Player/: Data.h  core.h  load.h  looper.h
app/src/main/java/libmedia/AudioEngine/Player/Oscillator/: Oscillator.h
app/src/main/java/libmedia/AudioEngine/Player/Oscillator/qdsp/: qdsp.cpp  qfloat.cpp  qfloat.h  qmusic.h
app/src/main/java/libmedia/AudioEngine/Player/internal/: looper.h
app/src/main/java/libmedia/AudioEngine/audio/: Mixer.cpp  SoundRecording.cpp  SoundRecording.h  SoundRecordingAudioData.h
app/src/main/java/libmedia/FFMPEG-ANDROID/: CMakeLists.txt  copy_ffmpeg_shared_libraries.sh  empty.cpp  merge_includes.sh
app/src/main/java/libmedia/FFMPEG-ANDROID/cpp/: fftools_cmdutils.c  fftools_ffmpeg.c  fftools_ffmpeg.h  fftools_ffmpeg_filter.c  fftools_ffmpeg_hw.c  fftools_ffmpeg_opt.c  fftools_ffprobe.c  fftools_ffprobe.h  mobileffmpeg.c  mobileffmpeg_abidetect.c  mobileffmpeg_exception.c  mobileffprobe.c  mobileffprobe.h
app/src/main/java/libmedia/FFMPEG-ANDROID/include/android-arm64/: config.h
app/src/main/java/libmedia/FFMPEG-ANDROID/include/android-arm64/ffmobile-headers/: fftools_cmdutils.h  mobileffmpeg.h  mobileffmpeg_abidetect.h  (+1 more)
app/src/main/java/libmedia/Oboe/: AudioEngine.cpp  AudioEngine.h  Generator.cpp  Generator.h  Player.cpp
app/src/main/java/libmedia/Oboe/Player/: CurrentFrame.h  Data.h  core.h  init.h  load.h  looper.h  playback.h
app/src/main/java/libmedia/Oboe/Player/internal/: callback.h
app/src/main/java/libmedia/Oboe/audio/: Mixer.cpp  Mixer.h  SoundRecording.cpp  SoundRecording.h  SoundRecordingAudioData.h
app/src/main/java/libmedia/ReSampler-development/: .editorconfig  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  FIRFilter.h  README.md  ReSampler.cpp  ReSampler.h  ReSampler.sln  ReSampler.vcxproj  ReSampler.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  alignedmalloc.h  biquad.h  conversioninfo.cpp  conversioninfo.h  csv.h  dff.h  ditherProfiles.md  ditherer.h  dsf.h  factorial.h  file_formats.htm  fraction.h  linux-build.md  mac-build.md  main.cpp  noiseshape.h  osspecific.h  raiitimer.h  rpi-build.md  srconvert.h  windows-build.md
app/src/main/java/libmedia/ReSampler-development/GroupDelayCorrection/: delayCorrection.md
app/src/main/java/libmedia/ReSampler-development/fftw32/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
app/src/main/java/libmedia/ReSampler-development/fftw64/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
app/src/main/java/libmedia/ReSampler-development/tests/: clean.sh  make-spectrograms.sh  sweep44k.sh  sweeps-csv.sh  sweeps-dither-64f.sh  sweeps-dither-ss.sh  sweeps-dither.sh  sweeps-single-precision.sh  sweeps-singleStage.sh  sweeps.sh  test-mt.sh  test-progress-settings.sh  test-raw-input.sh  test-st.sh  test.sh
app/src/main/java/libmedia/ReSampler-development/tests/inputs/: guitar-mono.flac  guitar.flac
app/src/main/java/libmedia/ReSampler-development/tests/outputs/: .git-keep.txt
app/src/main/java/libmedia/ReSampler-development/tests/spectrograms/: .git-keep.txt
app/src/main/java/libmedia/ReSampler-development/x64/minGW-W64/: QuadMath-readme.txt  minGW-readme.txt
app/src/main/java/libmedia/VST/: CMakeLists.txt
app/src/main/java/libmedia/VST/RotatingSquares/: CMakeLists.txt  RendererES2.cpp  RendererES3.cpp  gles3jni.cpp  mainLinux.cpp  mainWindows.cpp
app/src/main/java/libmedia/VST/libvst/: CMakeLists.txt
app/src/main/java/libmedia/VST/libvst/INTERNAL_APPLICATION_PRIVATE/: graphicsManager.kt  internal_loader.cpp
app/src/main/java/libmedia/VST/waveform/: CMakeLists.txt  SDL.cpp
app/src/main/java/libmedia/VST/waveform/SDL2-2.0.9/: VisualC.html
app/src/main/java/libmedia/libMonitor/: Monitor.h  MonitorPool.cpp  MonitorPool.h
app/src/main/java/libmedia/libMonitor2/: Monitor.cpp  Monitor.h  MonitorPool.cpp
app/src/main/java/libmedia/libvst/: CMakeLists.txt  graphicsManager.java  graphicsManager.kt
app/src/main/java/libmedia/libvst/API/: VST.h
app/src/main/java/libmedia/libvst/loader/: functionPointer.h  internal_loader.cpp  windowsAPI.h
app/src/main/java/libmedia/libvst/loader/Windows/: CMakeLists.txt  WinUser.h  WindowsAPIDefinitions.h  WindowsAPIHander.cpp  WindowsAPIHander.h  WindowsAPIMessage.cpp  WindowsAPIMessage.h  WindowsAPIProcess.cpp  WindowsAPIProcess.h  WindowsAPIServer.cpp  WindowsAPIServer.h  WindowsAPIThread.cpp
app/src/main/java/libmedia/libwaveform/audiowaveformAndroid/: CMakeLists.txt
app/src/main/java/libmedia/libwaveform/audiowaveformAndroid/test/: audiowaveform
app/src/main/java/libmedia/native/: AudioTime.cpp  AudioTime.h  JniHelpers.cpp  JniHelpers.h  OboeDebug.h  directories.cpp  directories.h  env.h  native.h  timer.h
app/src/main/java/libmedia/plasma/: pixelTypes.h  plasma.cpp
app/src/main/java/libmedia/resampler/native/: AudioResampler.cpp  AudioResampler.h
app/src/main/java/libmedia/resampler/resample-1.8.1/man/: windowfilter.1
app/src/main/java/libmedia/resampler/resample-1.8.1/src/: resamplesubs.c
app/src/main/java/libmedia/resampler/smarc-0.3/: .hg_archival.txt  .hgignore  .hgtags
app/src/main/java/libmedia/shell/: env.cpp  env.h  regex_str.cpp  regex_str.h
app/src/main/java/libmedia/waveform/: AudioInformation.h  AudioTools.cpp  AudioTools.h  TimeStretch.cpp  TimeStretch.h  pixelTypes.cpp  pixelTypes.h  timestats.cpp  timestats.h  waveform.cpp
app/src/main/java/libmedia/waveform/view/: WaveformView.kt
app/src/main/java/libmedia/waveform/view/utils/: AudioUtils.kt  SamplingUtils.kt  TextUtils.kt
(+454 files in other folders)
